--- a/NEWS
+++ b/NEWS
@@ -4,11 +4,11 @@ New in 0.9e:
 * Bug fixes.
 * Automake support for Libtool now uses the LTLIBRARIES primary.  See
   the Automake documentation for more information.
+* Added new `--disable-static' flag to disable building static
+  libraries on platforms that have shared libs.
 * Basic support for dynamically loaded modules: new `-export-dynamic'
   linking flag and corresponding `dlname' mode.
 * New `--features' flag to display configured libtool attributes.
-* Basic support for convenience libraries made of libtool objects: new
-  `-whole-archive' and `-no-whole-archive' linking flags.
 * Support *-*-linux-gnu* as an alias for *-*-linux*.
 * Support for *-*-openbsd*.
 
