--- a/README
+++ b/README
@@ -12,7 +12,7 @@ Shared library support has been implemented for these platforms:
   AIX 3.x (*-*-aix3*)
   AIX 4.x (*-*-aix4*)
   Digital/UNIX 3.x, 4.x, a.k.a. OSF/1 (*-*-osf3*, *-*-osf4*)
-  FreeBSD 2.x (*-*-freebsd*)
+  FreeBSD 2.x, 3.x (*-*-freebsd2*, *-*-freebsd3*)
   HP-UX 9.x, 10.x (*-*-hpux9*, *-*-hpux10*)
   IRIX 5.x, 6.x (*-*-irix5*, *-*-irix6*)
   Linux ELF targets (*-*-linux*, except *-*-linuxaout* and *-*-linuxoldld*)
